@@ -59,6 +59,8 @@ Version 0.5
 - added `passthrough_errors` to `run_simple`.
 - added `secure_filename`
 - added :func:`make_line_iter` 
+- added support for `extra_files` in
+  :func:`~werkzeug.script.make_runserver`
 
 Version 0.4.1
 -------------
